created board for game

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./homepage.scss";
 @import "./headerfooter.scss";
+@import "./tictactoe.scss";
 
 .app {
   background-color: whitesmoke;
