--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -1,14 +1,38 @@
 .tictactoe {
-  display: flex;
-  flex-flow: row wrap;
-  max-width: 450px;
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
 }
 
 .room {
-  flex: 1 0 30%;
+  background-color: cadetblue;
   border: 1px solid black;
   height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  align-self: stretch;
+  &:hover {
+    opacity: 0.4;
+    transition: 0.3s ease-in-out;
+  }
+  &:disabled {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+  }
+}
+.x-1 {
+  grid-row: 1;
+}
+.x-2 {
+  grid-row: 2;
+}
+.x-3 {
+  grid-row: 3;
+}
+.y-1 {
+  grid-column: 1;
+}
+.y-2 {
+  grid-column: 2;
+}
+.y-3 {
+  grid-column: 3;
 }
