--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -1,4 +1,12 @@
 .tictactoe {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 2rem 1rem;
+}
+
+.gameboard {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 100px);
 }
@@ -35,4 +43,11 @@
 }
 .y-3 {
   grid-column: 3;
+}
+.logger {
+  width: 100%;
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
 }
