--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -15,6 +15,7 @@
       border: 1px solid #999999;
       background-color: #cccccc;
       color: #666666;
+      cursor: no-drop;
     }
   }
 }
@@ -45,4 +46,10 @@
 }
 .game-invitation {
   letter-spacing: 0.2rem;
+}
+.player-turn--true {
+  background-color: whitesmoke;
+}
+.player-turn--false {
+  background-color: lightgray;
 }
