--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -53,3 +53,9 @@
 .player-turn--false {
   background-color: lightgray;
 }
+.ready {
+  background-color: lightcyan;
+}
+.not-ready {
+  background-color: lightcoral;
+}
