--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -2,6 +2,7 @@
 @import "./homepage.scss";
 @import "./headerfooter.scss";
 @import "./tictactoe.scss";
+@import "./profile.scss";
 
 .app {
   background-color: whitesmoke;
