firebase sign in with google

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -19,7 +19,12 @@
     min-width: auto;
   }
 }
-
+.btn {
+  height: 3rem;
+}
+.form-control {
+  height: 3rem;
+}
 // for accessibiblity
 @media (prefers-reduced-motion: reduce) {
   *,
