--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -4,6 +4,7 @@
 @import "./headerfooter.scss";
 @import "./tictactoe.scss";
 @import "./profile.scss";
+@import "./lobby.scss";
 
 #root {
   background-color: whitesmoke;
