--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,7 @@
 @import "./tictactoe.scss";
 @import "./profile.scss";
 @import "./lobby.scss";
+@import "./auth.scss";
 
 #root {
   background-color: whitesmoke;
