--- a/src/stylesheets/headerfooter.scss
+++ b/src/stylesheets/headerfooter.scss
@@ -9,8 +9,21 @@
   display: flex;
   align-items: center;
   padding: 1rem;
+  color: black;
+  text-decoration: none;
+  @media #{$mobile} {
+    display: none;
+  }
+  &:active {
+    text-decoration: none;
+    color: black;
+  }
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
 }
 .footer {
-  min-height: 5rem;
+  min-height: rem;
   margin-top: auto;
 }
