--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -2,3 +2,7 @@ $innerBlue: rgb(77, 166, 240);
 $outerBlue: rgb(57, 0, 198);
 $lightPurple: rgb(239, 116, 249);
 $mainBg: rgb(23, 30, 76);
+
+$desktop: "only screen and (max-width : 1024px)";
+$tablet: "only screen and (max-width : 768px)";
+$mobile: "only screen and (max-width : 480px)";
