--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,7 +3,7 @@
 @import "./homepage.scss";
 @import "./headerfooter.scss";
 @import "./tictactoe.scss";
-@import "./profile.scss";
+@import "./dashboard.scss";
 @import "./lobby.scss";
 @import "./auth.scss";
 
@@ -19,14 +19,21 @@
   max-width: 1100px;
   height: 100vh;
 }
+
 .card {
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 1rem;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   min-width: 300px;
+  max-width: 500px;
   @media only screen and (max-width: 425px) {
     min-width: auto;
   }
 }
 .btn {
   max-width: 220px;
+  min-width: 80px;
   min-height: 40px;
   align-items: center;
 }
