--- a/src/stylesheets/lobby.scss
+++ b/src/stylesheets/lobby.scss
@@ -1,3 +1,20 @@
-.lobby-container {
-  padding: 1rem;
+.lobby {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+.lobby-player {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.lobby-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.lobby-toggle-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
