--- a/src/stylesheets/homepage.scss
+++ b/src/stylesheets/homepage.scss
@@ -8,10 +8,21 @@
   max-width: 250px;
   background-color: #f3f5f5;
   color: black;
-  padding: 1rem;
   border-radius: 10px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   margin: 1rem;
+}
+.button-transparent {
+  background: none;
+  border: none;
+  border-radius: 10px;
+  padding: 1rem;
+  &:active {
+    outline: none;
+  }
+  &:focus {
+    outline: none;
+  }
   &:hover {
     background-color: #01ca44;
     color: white;
