--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -17,19 +17,15 @@
   font-family: "Roboto", sans-serif;
   margin: auto;
   max-width: 1100px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .card {
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 1rem;
+  width: 20rem;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  min-width: 300px;
-  max-width: 500px;
-  @media only screen and (max-width: 425px) {
-    min-width: auto;
-  }
 }
 .btn {
   max-width: 220px;
@@ -40,7 +36,13 @@
 .form-control {
   height: 3rem;
 }
-
+.logger {
+  max-height: 300px;
+  overflow-y: scroll;
+  .log-wrapper {
+    border-bottom: 1px solid #3d3b3d;
+  }
+}
 // for accessibiblity
 @media (prefers-reduced-motion: reduce) {
   *,
