--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -24,8 +24,9 @@
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 1rem;
-  width: 20rem;
+  min-width: 20rem;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  margin: 1rem;
 }
 .btn {
   max-width: 220px;
