--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -1,22 +1,36 @@
-.tictactoe {
+.board {
   display: grid;
-  grid-template-columns: repeat(3, 6rem);
-  margin: auto;
-  .room {
-    background-color: cadetblue;
-    border: 1px solid black;
-    height: 6rem;
-    align-self: stretch;
-    &:hover {
-      opacity: 0.4;
-      transition: 0.3s ease-in-out;
-    }
-    &:disabled {
-      border: 1px solid #999999;
-      background-color: #cccccc;
-      color: #666666;
-      cursor: no-drop;
-    }
+  justify-content: center;
+}
+.cell {
+  border: 2px solid #7d4141;
+  min-width: 7rem;
+  min-height: 7rem;
+  align-self: stretch;
+  grid-auto-columns: auto;
+  &:hover {
+    opacity: 0.4;
+    transition: 0.3s ease-in-out;
+  }
+  &:disabled {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    cursor: no-drop;
+  }
+}
+.tictactoe {
+  .x-1 {
+    border-left: none;
+  }
+  .y-1 {
+    border-top: none;
+  }
+  .y-3 {
+    border-bottom: none;
+  }
+  .x-3 {
+    border-right: none;
   }
 }
 .x-1 {
