--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -8,16 +8,11 @@
   min-height: 7rem;
   align-self: stretch;
   grid-auto-columns: auto;
-  &:hover {
-    opacity: 0.4;
-    transition: 0.3s ease-in-out;
-  }
-  &:disabled {
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #666666;
-    cursor: no-drop;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
 }
 .tictactoe {
   .x-1 {
@@ -51,20 +46,69 @@
 .y-3 {
   grid-row: 3;
 }
-.referee {
-  max-width: 10rem;
+.exes,
+.circle {
+  cursor: not-allowed;
 }
-.logger {
-  min-height: 270px;
-  max-height: 350px;
+.exes::before,
+.exes::after {
+  content: "";
+  position: absolute;
+  width: 1rem;
+  height: 6rem;
+  background-color: black;
+  border-radius: 10px;
 }
-.game-invitation {
-  letter-spacing: 0.2rem;
+.exes::before {
+  transform: rotate(45deg);
 }
-.ready {
-  background-color: lightcyan;
+.exes::after {
+  transform: rotate(-45deg);
 }
-.coin {
-  margin: 0;
-  font-size: 2rem;
+.circle::before,
+.circle::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+.circle::before {
+  width: 6rem;
+  height: 6rem;
+  background-color: black;
+}
+.circle::after {
+  width: 5rem;
+  height: 5rem;
+  background-color: white;
+}
+.player1:not(.exes):not(.circle):hover::before,
+.player1:not(.exes):not(.circle):hover::after {
+  content: "";
+  position: absolute;
+  width: 1rem;
+  height: 6rem;
+  background-color: lightgray;
+  border-radius: 10px;
+}
+.player1:not(.exes):not(.circle):hover::before {
+  transform: rotate(45deg);
+}
+.player1:not(.exes):not(.circle):hover::after {
+  transform: rotate(-45deg);
+}
+.player2:not(.exes):not(.circle):hover::before,
+.player2:not(.exes):not(.circle):hover::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+.player2:not(.exes):not(.circle):hover::before {
+  width: 6rem;
+  height: 6rem;
+  background-color: lightgray;
+}
+.player2:not(.exes):not(.circle):hover::after {
+  width: 5rem;
+  height: 5rem;
+  background-color: white;
 }
