--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -6,6 +6,7 @@
 @import "./dashboard.scss";
 @import "./lobby.scss";
 @import "./auth.scss";
+@import "./game.scss";
 
 #root {
   background-color: whitesmoke;
@@ -24,9 +25,12 @@
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 1rem;
-  min-width: 20rem;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   margin: 1rem;
+}
+.glow .card {
+  background-color: #3d3b3d;
+  color: white;
 }
 .btn {
   max-width: 220px;
