--- a/src/stylesheets/keyframes.scss
+++ b/src/stylesheets/keyframes.scss
@@ -1,14 +1,9 @@
 // fade in and out animation for notifications
 @keyframes fadeOut {
   0% {
-    transform: translateY(4rem);
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-    transform: translateY(0);
+    transform: scale(1.07);
   }
   100% {
-    opacity: 0;
+    transform: scale(1);
   }
 }
