--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -33,14 +33,12 @@
   background-color: #3d3b3d;
   border: none;
   color: white;
-  animation: fadeOut 2s  infinite alternate ease-in ;
+  animation: fadeOut 2s infinite alternate ease-in;
 }
 .dim .card {
   background-color: #1b1a1b;
   color: white;
   border: none;
-  
-
 }
 .btn {
   max-width: 220px;
@@ -56,9 +54,16 @@
   overflow-y: scroll;
   .log-wrapper {
     border-bottom: 1px solid #3d3b3d;
-  }
+  } 
 }
-
+.modal-results {
+  background: rgba(223, 218, 218, 0.75);
+  border-radius: 10px;
+  padding: 1rem;
+  backdrop-filter: blur(2px); 
+  border: solid 2px transparent;
+  background-clip: padding-box;
+}
 // for accessibiblity
 @media (prefers-reduced-motion: reduce) {
   *,
