--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -57,12 +57,18 @@
   } 
 }
 .modal-results {
-  background: rgba(223, 218, 218, 0.75);
+  background: rgba(126, 126, 126, 0.9);
   border-radius: 10px;
   padding: 1rem;
   backdrop-filter: blur(2px); 
   border: solid 2px transparent;
   background-clip: padding-box;
+}
+.modal-footer {
+  border:none;
+  display: flex;
+  align-items: center;
+  padding: 0;
 }
 // for accessibiblity
 @media (prefers-reduced-motion: reduce) {
