feat: board on screen

--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -9,4 +9,12 @@
       justify-content: space-around;
     }
   }
+  .game-players {
+    display: flex;
+    justify-content: center;
+  }
+}
+.singlePlayer{
+  display: flex;
+  justify-content: center;
 }
