--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
   @media #{$tablet} {
     .game-players {
       display: flex;
@@ -12,9 +14,71 @@
   .game-players {
     display: flex;
     justify-content: center;
+    width: 100%;
+    margin: auto;
   }
 }
-.singlePlayer{
-  display: flex;
+.board {
+  display: grid;
   justify-content: center;
+}
+.x-1 {
+  grid-column: 1;
+}
+.x-2 {
+  grid-column: 2;
+}
+.x-3 {
+  grid-column: 3;
+}
+.x-4 {
+  grid-column: 4;
+}
+.x-5 {
+  grid-column: 5;
+}
+.x-6 {
+  grid-column: 6;
+}
+.x-7 {
+  grid-column: 7;
+}
+.x-8 {
+  grid-column: 8;
+}
+.x-9 {
+  grid-column: 9;
+}
+.x-10 {
+  grid-column: 10;
+}
+.y-1 {
+  grid-row: 1;
+}
+.y-2 {
+  grid-row: 2;
+}
+.y-3 {
+  grid-row: 3;
+}
+.y-4 {
+  grid-row: 4;
+}
+.y-5 {
+  grid-row: 5;
+}
+.y-6 {
+  grid-row: 6;
+}
+.y-7 {
+  grid-row: 7;
+}
+.y-8 {
+  grid-row: 8;
+}
+.y-9 {
+  grid-row: 9;
+}
+.y-10 {
+  grid-row: 10;
 }
