--- a/src/stylesheets/snake-game.scss
+++ b/src/stylesheets/snake-game.scss
@@ -1,9 +1,9 @@
 .snake-game{
   width: 100%;
-  height: 50vh;
   .cell {
     display: flex;
-    width: 100%;
+    width: 5rem;
+    height: 5rem;
   }
 } 
  
