--- a/src/stylesheets/snake-game.scss
+++ b/src/stylesheets/snake-game.scss
@@ -9,8 +9,11 @@
     width: 5rem;
     height: 5rem;
   }
-  .snake-head {
+  .snake {
     background-color: rgb(33, 168, 62);
+  }
+  .food {
+    background-color: rgb(171, 173, 13);
   }
 } 
  
