--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -1,22 +1,22 @@
-.game-content {
+// .game-content {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-around;
+//   flex-wrap: wrap;
+//   flex-direction: column;
+//   width: 100%;
+//   height: 100%;
+//   @media #{$tablet} {
+//     .game-players {
+//       display: flex;
+//       justify-content: space-around;
+//     }
+//   }
+// }
+.game-players {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-around;
-  flex-wrap: wrap;
-  flex-direction: column;
-  width: 100%;
-  @media #{$tablet} {
-    .game-players {
-      display: flex;
-      justify-content: space-around;
-    }
-  }
-  .game-players {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: auto;
-  }
 }
 .board {
   display: grid;
