--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -1,27 +1,25 @@
-.cell {
-  border: 2px solid #7d4141;
-  width: 100%; 
-  height: 100%;
-  display: flex;
-  align-self: stretch;
-  grid-auto-columns: auto;
-  justify-content: center;
-  align-items: center;
-}
-
 .tictactoe {
+  min-height: 50vh;
+
+  .cell {
+    border: 2px solid #7d4141;
+    width: 100%;
+    // height: 100%;
+    // display: flex;
+    // align-self: stretch;
+    // grid-auto-columns: auto;
+    // justify-content: center;
+    // align-items: center;
+  }
   .x-1 {
     border-left: none;
   }
-
   .y-1 {
     border-top: none;
   }
-
   .y-3 {
     border-bottom: none;
   }
-
   .x-3 {
     border-right: none;
   }
