--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -20,7 +20,11 @@
 }
 .board {
   display: grid;
-  justify-content: center;
+  padding: 1rem 0;
+  min-height: 65vh;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+  grid-auto-rows: 1fr;
 }
 .x-1 {
   grid-column: 1;
