--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -18,6 +18,13 @@
   flex-direction: row;
   justify-content: space-around;
 }
+.game-over {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+}
 .board {
   display: grid;
   padding: 1rem 0;
