--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -1,18 +1,3 @@
-// .game-content {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-around;
-//   flex-wrap: wrap;
-//   flex-direction: column;
-//   width: 100%;
-//   height: 100%;
-//   @media #{$tablet} {
-//     .game-players {
-//       display: flex;
-//       justify-content: space-around;
-//     }
-//   }
-// }
 .game-players {
   display: flex;
   flex-direction: row;
@@ -27,11 +12,10 @@
 }
 .board {
   display: grid;
+  margin: auto;
   padding: 1rem 0;
-  min-height: 65vh;
-  grid-auto-columns: 1fr;
-  grid-auto-flow: column;
-  grid-auto-rows: 1fr;
+  height: 70vh;
+  width: 70vh;
 }
 .x-1 {
   grid-column: 1;
