--- a/src/stylesheets/tictactoe.scss
+++ b/src/stylesheets/tictactoe.scss
@@ -89,7 +89,7 @@ $circleGray: url("../assets/circle-gray.svg");
 //   background-color: white;
 // }
 
-.board .exes,
-.board .circle {
+.grid .exes,
+.grid .circle {
   cursor: not-allowed;
 }
