--- a/src/stylesheets/headerfooter.scss
+++ b/src/stylesheets/headerfooter.scss
@@ -24,11 +24,10 @@
   }
 }
 .footer {
-  min-height: rem;
+  min-height: 1rem;
   margin-top: auto;
 }
 .nav-online {
   width: 100%;
   background-color: cadetblue;
-  
 }
