--- a/src/stylesheets/game.scss
+++ b/src/stylesheets/game.scss
@@ -1,3 +1,12 @@
+.game {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+}
 .game-over {
   display: flex;
   justify-content: center;
@@ -9,8 +18,6 @@
   display: grid;
   margin: auto;
   padding: 1rem 0;
-  height: 70vh;
-  width: 70vh;
 }
 .x-1 {
   grid-column: 1;
