--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -21,22 +21,21 @@
   max-width: 1100px;
   min-height: 100vh;
 }
-
-.card {
-  background-color: #fcfcfc;
+.player {
   border-radius: 4px;
   padding: 1rem;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  margin: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 
-.glow .card {
+.glow {
   background-color: #3d3b3d;
   border: none;
   color: white;
   animation: fadeOut 2s infinite alternate ease-in;
 }
-.dim .card {
+.dim {
   background-color: #1b1a1b;
   color: white;
   border: none;
