--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -19,7 +19,7 @@
   font-family: "Roboto", sans-serif;
   margin: auto;
   max-width: 1100px;
-  min-height: 100vh;
+  height: 100vh;
 }
 .player {
   border-radius: 4px;
