--- a/src/stylesheets/lobby.scss
+++ b/src/stylesheets/lobby.scss
@@ -2,12 +2,17 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
-.lobby-player {
+.lobby-data {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.lobby-options {
+  padding: 1rem;
+  background-color: #f8f9fa;
+  border-radius: 4px;
 }
 .lobby-buttons {
   display: flex;
@@ -18,6 +23,14 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.game-grid {
-  height: 400px;
+
+.logger {
+  border-radius: 4px;
+  max-height: 50vh;
+  overflow-y: auto;
+  background-color: #f8f9fa;
+  padding: 1rem;
+  .log {
+    border-bottom: 1px solid #3d3b3d;
+  }
 }
