initilize styling of  dashboard

--- a/src/stylesheets/dashboard.scss
+++ b/src/stylesheets/dashboard.scss
@@ -1,3 +1,9 @@
+.dashboard {
+  background-color: $primaryLightBg;
+  padding: 1rem;
+  border-radius: 4px;
+}
+
 .avatar-frame {
   margin: auto;
 }
