--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,65 +1,3 @@
-@import "./variables.scss";
-@import "./keyframes.scss";
-@import "./headerfooter.scss";
-@import "./lobby.scss";
-@import "./auth.scss";
-@import "./dashboard.scss";
-@import "./homepage.scss";
-@import "./game.scss";
-@import "./tictactoe.scss";
-@import "./snake-game.scss";
-
-#root {
-  background-color: whitesmoke;
-}
-.app {
-  display: flex;
-  flex-direction: column;
-  background-color: #3d3b3d;
-  font-family: "Roboto", sans-serif;
-  margin: auto;
-  max-width: 1100px;
-  height: 100vh;
-}
-.player {
-  border-radius: 4px;
-  padding: 1rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.glow {
-  background-color: #3d3b3d;
-  border: none;
-  color: white;
-  animation: fadeOut 2s infinite alternate ease-in;
-}
-.dim {
-  background-color: #1b1a1b;
-  color: white;
-  border: none;
-}
-.btn {
-  max-width: 220px;
-  min-width: 80px;
-  min-height: 40px;
-  align-items: center;
-}
-.form-control {
-  height: 3rem;
-}
-
-// for accessibiblity
-@media (prefers-reduced-inputdirection: reduce) {
-  *,
-  ::before,
-  ::after {
-    animation-delay: -1ms !important;
-    animation-duration: 1ms !important;
-    animation-iteration-count: 1 !important;
-    background-attachment: initial !important;
-    transition-duration: 0s !important;
-    transition-delay: 0s !important;
-  }
-}
+@import "./vars";
+@import "./styles";
+@import "./components";
