--- a/src/stylesheets/components/dashboard.scss
+++ b/src/stylesheets/components/dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  background-color: $primaryLightBg;
+  background-color: #{$primary-color};
   padding: 1rem;
   border-radius: 4px;
 }
