--- a/src/stylesheets/components/forms.scss
+++ b/src/stylesheets/components/forms.scss
@@ -47,7 +47,7 @@
 }
 .btn-submit {
   background-color: #{$secondary-color};
-  color: #{$text-color};
+  color: #{$primary-text};
   margin: 1rem auto;
   max-width: 300px;
 }
