--- a/src/stylesheets/components/index.scss
+++ b/src/stylesheets/components/index.scss
@@ -15,6 +15,7 @@
 @import "./landing.scss";
 @import "./lobby.scss";
 @import "./log.scss";
+@import "./logo.scss";
 @import "./searchbar.scss";
 @import "./snake-game.scss";
 @import "./tictactoe.scss";
