--- a/src/stylesheets/components/log.scss
+++ b/src/stylesheets/components/log.scss
@@ -19,7 +19,7 @@
     margin: 0 1rem;
     border-radius: 1rem;
     padding: 0.5rem 1rem;
-    background-color: #{$text-color};
+    background-color: #{$primary-text};
     color: #{$text-color3};
     animation: fadeIn 1s, slideUp 0.8s forwards;
     .link {
