--- a/src/stylesheets/styles/read-more.scss
+++ b/src/stylesheets/styles/read-more.scss
@@ -43,6 +43,6 @@
 .message-success {
   border-radius: 4px;
   padding: 1rem;
-  color: #{$text-color};
+  color: #{$primary-text};
   background-color: #{$primary-color2};
 }
