--- a/src/stylesheets/vars/variables.scss
+++ b/src/stylesheets/vars/variables.scss
@@ -9,7 +9,7 @@ $secondary-color: #00b358;
 $secondary-color2: #202123;
 $secondary-color3: #003300;
 
-$text-color: #fff;
+$primary-text: #fff;
 $text-color2: rgb(134, 134, 134);
 $text-color3: rgb(0, 0, 0);
 $instagram: #ea4c52;
