--- a/src/stylesheets/components/booking.scss
+++ b/src/stylesheets/components/booking.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #{$text-color};
+  background-color: #{$primary-text};
   flex: 1;
   // width: 100%;
   gap: 1rem;
@@ -48,7 +48,7 @@
     background-color: #{$secondary-color2};
   }
   [data-state="check"] {
-    color: #{$text-color};
+    color: #{$primary-text};
   }
 }
 .book-event {
