--- a/src/stylesheets/components/header-footer.scss
+++ b/src/stylesheets/components/header-footer.scss
@@ -1,12 +1,8 @@
 header {
   display: flex;
   align-items: center;
-  // padding: 1rem;
   background-color: #{$secondary-color};
   border-bottom: 1px solid #{$secondary-color2};
-  position: sticky;
-  top: 0;
-  z-index: 3;
   max-height: 15vh;
   justify-content: space-between;
   padding: 1rem;
@@ -20,11 +16,11 @@ footer {
   align-items: flex-start;
   justify-content: space-around;
   flex-wrap: wrap;
-  color: #{$text-color};
+  color: #{$primary-text};
   background-color: #{$secondary-color};
   padding: 1rem;
   gap: 1rem;
 }
 .link {
-  color: #{$text-color};
+  color: #{$primary-text};
 }
