--- a/src/stylesheets/styles/cards/card-section.scss
+++ b/src/stylesheets/styles/cards/card-section.scss
@@ -12,7 +12,7 @@
   display: flex;
   gap: 1rem;
   .icons {
-    background-color: #{$text-color};
+    background-color: #{$primary-text};
     color: #{$secondary-color};
   }
 }
