--- a/src/stylesheets/styles/read-more.scss
+++ b/src/stylesheets/styles/read-more.scss
@@ -23,7 +23,7 @@
 }
 
 .read-more-toggle {
-  color: #{$text-color2};
+  color: #{$secondary-text};
   appearance: none;
   cursor: pointer;
   text-align: right;
