--- a/src/stylesheets/vars/variables.scss
+++ b/src/stylesheets/vars/variables.scss
@@ -1,22 +1,29 @@
 $danger: #f93131;
 $success: #320064;
+// #f1f7ed
+// #54494b
+// #b33951
 
-$primary-color: #282828;
-$primary-color2: #343541;
-$primary-color3: #292174;
+// #91C7b1
+// #e3d081
 
-$secondary-color: #00b358;
-$secondary-color2: #202123;
-$secondary-color3: #003300;
+$primary-color: #b33951;
+$primary-color2: #e3d081;
+$primary-color3: #91c7b1;
 
-$primary-text: #fff;
-$text-color2: rgb(134, 134, 134);
+// $secondary-color: #f1f7ed;
+// $secondary-color2: #54494b;
+$secondary-color: #54494b;
+$secondary-color2: #f1f7ed;
+
+$primary-text: #333;
+$secondary-text: rgb(134, 134, 134);
 $text-color3: rgb(0, 0, 0);
 $instagram: #ea4c52;
 // shadow blends
-$shadow-color: #ddd;
+$shadow-color: #eee;
 $shadow-color2: purple;
-$shadow-color3: #eee;
+$shadow-color3: #ddd;
 /* readmore lines */
 $max-lines: 2;
 $line-height: 1.4;
