update displayed colors

--- a/src/stylesheets/components/logo.scss
+++ b/src/stylesheets/components/logo.scss
@@ -3,6 +3,5 @@
   align-items: flex-end;
   gap: 0.5rem;
   text-decoration: none;
-  color: #{$primary-text};
-  // flex-direction: ;
+  color: #{$secondary-text};
 }
