--- a/src/stylesheets/vars/variables.scss
+++ b/src/stylesheets/vars/variables.scss
@@ -17,7 +17,7 @@ $secondary-color: #54494b;
 $secondary-color2: #f1f7ed;
 
 $primary-text: #333;
-$secondary-text: rgb(134, 134, 134);
+$secondary-text: #eee;
 $text-color3: rgb(0, 0, 0);
 $instagram: #ea4c52;
 // shadow blends
