--- a/src/stylesheets/styles/cards/cards.scss
+++ b/src/stylesheets/styles/cards/cards.scss
@@ -9,6 +9,8 @@
   min-width: 200px;
   max-width: 280px;
   background-color: #{$secondary-color2};
+  color: #{$primary-text};
+  text-decoration: none;
   .hero {
     border-radius: 1rem;
     max-width: 10rem;
