--- a/src/stylesheets/components/lobby.scss
+++ b/src/stylesheets/components/lobby.scss
@@ -10,9 +10,10 @@
   gap: 1rem;
 }
 .lobby-options {
+  background-color: #{$secondary-color2};
   padding: 1rem;
-  background-color: #{$primary-color};
   border-radius: 4px;
+  color: #{$primary-text};
 }
 .lobby-buttons {
   display: flex;
