--- a/src/stylesheets/components/app.scss
+++ b/src/stylesheets/components/app.scss
@@ -19,7 +19,7 @@ span {
   font-family: "Roboto", sans-serif;
   margin: auto;
   max-width: 1100px;
-  height: 100vh;
+  // height: 100vh;
 }
 
 .btn {
