add dummy text to loading page, and dispaly featured games

--- a/src/stylesheets/components/about.scss
+++ b/src/stylesheets/components/about.scss
@@ -24,6 +24,7 @@
 .social {
   display: flex;
   flex-direction: column;
+  color: #{$secondary-text};
   gap: 1rem;
   .title {
     text-align: center;
