moved icon assets to make it more readable

--- a/src/stylesheets/styles/index.scss
+++ b/src/stylesheets/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./container.scss";
 @import "./navigation.scss";
 @import "./buttons.scss";
+@import "./icons.scss";
 @import "./cards/index.scss";
 @import "./read-more.scss";
