--- a/src/stylesheets/vars/variables.scss
+++ b/src/stylesheets/vars/variables.scss
@@ -20,6 +20,7 @@ $primary-text: #333;
 $secondary-text: #eee;
 $text-color3: rgb(0, 0, 0);
 $instagram: #ea4c52;
+$twitter: #1da1f2;
 // shadow blends
 $shadow-color: #eee;
 $shadow-color2: purple;
