--- a/src/stylesheets/components/header-footer.scss
+++ b/src/stylesheets/components/header-footer.scss
@@ -16,7 +16,7 @@ footer {
   align-items: flex-start;
   justify-content: space-around;
   flex-wrap: wrap;
-  color: #{$primary-text};
+  color: #{$secondary-text};
   background-color: #{$secondary-color};
   padding: 1rem;
   gap: 1rem;
